<resources>
    <string name="app_name">Shop440</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--SharedPreference Strings-->
    <string name="state">loginState</string>
    <string name="shop440">data</string>
    <string name="profileImage">profile_image</string>
    <string name="username">name</string>
    <string name="facebook_app_id">909211035848244</string>
    <string name="fb_login_protocol_scheme">fb909211035848244</string>
    <string name="fb_account_kit">982d0b4c5c0873ae9bd3e1e19d41acf0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_get_location">GetLocation</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_store">Store</string>
    <string name="title_activity_product_view">ProductView</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_searchresult">SearchresultActivity</string>
    <string name="go_to">Goto</string>
    <string name="download">download</string>
    <string name="please_select_your_product_to">Please Select your Product Category to proceed</string>
    <string name="splash3_text">Simply get directons to the store using your phones map and GPS location</string>
    <string name="sign_in">Sign in</string>
    <string name="login_error">Problem authenticating account</string>
    <string name="button">ok</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="fill_in_your_name_and_email_to_continue">Just one more form!</string>
    <string name="fragment_instance_error">Fragment is not an instance of Listener</string>
    <string name="sign_up">Sign up</string>
    <string name="ok">OK!</string>
    <string name="loader_text">Just a moment...</string>
    <string name="purchases">PURCHASES</string>
    <string name="likes">LIKES</string>
    <string name="stores">STORES</string>
    <string name="my_stores">My Stores</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign out</string>
    <string name="see_more_from_store">See more from store</string>
    <string name="loading">Loading</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="price_display">%1$s %2$s</string>
    <string name="share_on_facebook">Share Item</string>
    <string name="let_your_friends_see_this_item">let your friends see this item</string>
    <string name="error_results">Cannot fetch results at the moment!</string>
    <string name="accessing_store_service">Accessing store service</string>
    <string name="location_help_text">Ensure to accept the location so we can get your current location to aid in directing your customers</string>
    <string name="network_error">Network error check connectivity</string>
    <string name="select_store_logo">Select Store Logo</string>
    <string name="store_name">Store Name</string>
    <string name="description">Description</string>
    <string name="specialisation">Specialisation</string>
    <string name="store_phone">Store Phone</string>
    <string name="create_store">Create Store</string>
    <string name="signup_request_error">Error processing request</string>
    <string name="internet_error_message">Poor network connection try again later</string>
    <string name="api_data_load_error">Error completing request</string>
    <string-array name="fonts">
        <item>Roboto-Medium.ttf</item>
        <item>Roboto-Thin.ttf</item>
        <item>OpenSans-Light.ttf</item>
        <item>OpenSans-Regular.ttf</item>
        <item>Roboto-Light.ttf</item>
        <item>Roboto-Regular.ttf</item>
    </string-array>
    <string name="title_activity_main_navigation">MainNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_bar_placeholder">PlaceHolder</string>
    <string name="title_activity_main3">signup</string>
    <string name="full_name_hint">Full Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="create_account_hint">Create account</string>
    <string name="email_signup_hint">Email</string>
    <string name="log_in_auth_button">Log in</string>
    <string name="title_auth_text">Welcome to Shop440</string>
    <string name="create_account_auth_text">Create Account</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="insert_the_passcode_sent_to_your_phone">Insert the passcode sent to your phone</string>
    <string name="passcode_loading_text">Loading Passcode</string>
    <string name="email_invalid_error">Please correct email address</string>
    <string name="phone_invalid_error_message">Please fill correct phone format</string>
    <string name="retry_button_text">Retry</string>
    <string name="required_field_error">required field</string>
    <string name="feed_error_data">Unable to get data</string>
    <string name="search_hint"><![CDATA[Find Stores & Products]]></string>
    <string name="view_more">See all >></string>
    <string name="currency_symbol_code">₦</string>
    <string name="log_out_hint_profile">Oops, you seem to be logged out!</string>
    <string name="sign_in_sign_up">Sign in / Sign up</string>
    <string name="sign_in_error">Error signing in</string>
    <string name="password_hint">Password</string>
    <string name="re_type_password_hint">Re-type password</string>
    <string name="password_match_error">Passwords must match</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="log_out">Log out</string>
    <string name="notifications">Notifications</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="policy">Shop440 is a product of Past3 Technologies Limited all data collected or by any means derived from the user will only be used to deliver the best experience.</string>
    <string name="sign_in_login_text">Log in</string>
    <string name="sign_in_button">Sign in</string>
    <string name="number_exist_error">User with this phone number already exists</string>
    <string name="buy_now_button">Add to cart</string>
    <string name="product_view_hint_more">View more from seller</string>
    <string name="visit_button">Visit</string>
    <string name="cart_hint"><![CDATA[ <b>%1$s</b> items in your cart total of (<b>%2$s</b>)]]></string>
    <string name="proceed_to_checkout">Checkout</string>
    <string name="view_cart">View cart</string>
    <string name="tiny_files">https://tinyfiles.past3dev.com/resize</string>
    <string name="price_format"> %s%d</string>
    <string name="per_item">per item</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="quantity">quantity: %s</string>
    <string name="amount">amount: %s</string>
    <string name="checkout">Cart</string>
    <string name="next_checkout_button">Next</string>
    <string name="order_finish_button">Check out</string>
    <string name="prev_button">Prev</string>
    <string name="sub_total">Sub total</string>
    <string name="total">Total</string>
    <string name="shop_total">Shop total</string>
    <string name="current_address">Current address</string>
    <string name="current_city">Current city</string>
    <string name="convince_addr_text">We would love to know where you stay.</string>
    <string name="save_button_text">save</string>
    <string name="my_orders">My Orders</string>
    <string name="search_text">Search here</string>
    <string name="or_choose_a_category">or Choose a category</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="see_more">See more</string>
    <string name="default_channel">default</string>
</resources>
