<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:truesdk="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:background="@android:color/white"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/closeAuthButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_close_dark"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:contentDescription=""
                />
            <Button
                android:id="@+id/loginButtonAuth"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_auth_button"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:theme="@style/buttonHighlight"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/ic_logo"/>

        <com.shop440.widgets.FontTextView
            android:id="@+id/fontTextView2"
            style="@style/headNormalLineTextDef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="25dp"
            android:text="@string/title_auth_text"
            app:fontName="RobotoMedium"
            android:textColor="@color/colorPrimaryDark"
            />


        <Button
            android:id="@+id/facebookSignin"
            style="@style/buttonRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:visibility="gone"
            android:layout_marginTop="36dp"
            android:text="@string/sign_in_with_facebook"
            />

        <Button
            android:id="@+id/createAccountAuthButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/border"
            android:text="@string/create_account_auth_text"
            />

        <com.truecaller.android.sdk.TrueButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            truesdk:truebutton_text="signUp"/>

    </LinearLayout>
    <com.shop440.widgets.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        style="@style/caption2TextDef"
        app:fontName="OpenSansLight"
        android:layout_marginTop="12dp"
        android:layout_gravity="bottom"
        android:textSize="12sp"
        android:layout_marginBottom="24dp"
        android:text="@string/policy"/>

</FrameLayout>