<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"/>

        <com.shop440.widgets.FontTextView
            android:id="@+id/profileNameText"
            style="@style/headLineTextDef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Smile"
            app:fontName="RobotoMedium"/>

        <com.shop440.widgets.FontTextView
            style="@style/descriptiveTExtDef"
            android:id="@+id/profilePhoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="07033383068"
            android:textStyle="normal"
            app:fontName="RobotoThin"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="36dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/profile_ripple"
            android:orientation="horizontal">

            <com.shop440.widgets.FontTextView
                style="@style/listTextDef"
                android:id="@+id/cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/shopping_cart"
                app:fontName="RobotoRegular"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_shopping_cart_48px"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/profile_ripple"
            android:orientation="horizontal">

            <com.shop440.widgets.FontTextView
                style="@style/listTextDef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/notifications"
                app:fontName="RobotoRegular"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_notifications_active_48px"/>
        </RelativeLayout>


        <com.shop440.widgets.FontTextView
            style="@style/listTextDef"
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/log_out"
            android:background="?attr/selectableItemBackground"
            android:layout_gravity="left"
            app:fontName="RobotoRegular"/>
    </LinearLayout>
</ScrollView>